# Game-Master-Agent

./: .env.template  .gitignore  0.md  01-P0-架构违规修复指导.md  02-P1-Presentation解耦重构指导.md  03-P2-代码质量清理指导.md  04-P3-目录结构优化指导.md  77.md  API设置界面重构指导文档.md  CODE_WIKI.md  GAME_MASTER_AGENT.md  GAME_MASTER_AGENT_P2.md  GAME_MASTER_AGENT_P3.md  GAME_MASTER_AGENT_P4.md  GAME_MASTER_AGENT_P5.md  GAME_MASTER_AGENT_V2_P1.md  GAME_MASTER_AGENT_V2_P3.md  GAME_MASTER_AGENT_V2_P4.md  GAME_MASTER_AGENT_V2_TUI.md  GAME_MASTER_AGENT_V2_VERIFY.md  GAME_MASTER_AGENT_V2_WB.md  GAME_MASTER_AGENT_V2_WB_TEST.md  GAME_MASTER_AGENT_WORKBENCH_1.md  GAME_MASTER_AGENT_WORKBENCH_2.md  Game-Master-Agent-代码审查报告.md  Game-Master-Agent-功能检查报告.md  Game-Master-Agent-架构审查总结-v2.md  Game-Master-Agent-架构审查总结.md  P1-工具系统全量接入.md  P1_CORE_DATA_SKILL.md  P2-调试面板与运行体验打通.md  P3-代码质量与工程规范.md  P3_FEATURE_SERVICES_SKILL.md  P5_GUI_OPS_SKILL.md  P7_GRAPH_INTEGRATION_SKILL.md  README.md  architecture_v2.md  communication_protocol.md  dev_plan_v2.md  engine_adapter.md  (+30 more)
2workbench/: .env.template  __main__.py  app.py  centered_click_demo.py  click_tool_test.py  click_toolbar_new.py  create_agent_automation.py  create_agent_test.py  create_agent_via_ide.py  final_click_demo.py  gui_automation.py  main.py  main_window.py  manual_agent_creation.py  manual_click_demo.py  mouse_to_window_center.py  open_in_ide.py  open_project_in_gui.py  precise_click_demo.py  save_full_screenshot.py  save_v2.py  save_v3.py  simple_agent_demo.py
docs/: LANGGRAPH_MIGRATION_SUMMARY.md  P0_FOUNDATION_SKILL.md  P2_LANGGRAPH_SKILL.md  P4_GUI_EDITOR_SKILL.md  P6_TRAE_SKILL_SKILL.md  api.md  api_design.md  architecture.md  contributing.md  memory_system.md  prompt-tuning-log.md  reference-notes.md  settings_dialog修复指导文档.md  user_feedback.md  workspace_design.md  代码审查文档.md  代码审查文档2.md  优化大纲 (3).md  优化大纲.md  优化大纲3.md  优化步骤P0-紧急修复.md  优化步骤P01-数据修复.md  优化步骤P1 (2).md  优化步骤P1-功能完善.md  优化步骤P1-打通Agent运行流程.md  优化步骤P1-数据修复.md  优化步骤P1.md  优化步骤P2-编辑器体验修复.md  优化步骤P2.md  优化步骤P3.md  优化步骤P4.md  优化步骤P5.md  优化步骤P7.md  需求1-全面审查Trae执行总表.md  需求2-LangGraph预构建组件替换方案.md  需求3-01-AITool基类与工具注册.md  需求3-02-领域工具实现.md  需求3-03-TaskPlanner任务规划器.md  需求3-04-ToolExecutor执行引擎.md  需求3-05-AIAssistantService核心服务.md  (+7 more)
electron/: main.js  package-lock.json  package.json  preload.js
gui/: __init__.py  api_client.py  main.py  main_window.py
prompts/: system_prompt.md
scripts/: token_audit.py
src/: cli.py  cli_v2.py  config.py
tests/: conftest.py  test_admin_control.py  test_admin_data.py  test_api_action.py  test_api_auth.py  test_api_full.py  test_api_player.py  test_api_worlds.py  test_cache.py  test_combat.py  test_connection_manager.py  test_context_manager.py  test_create_npc_tool.py  test_database.py  test_deepseek.py  test_dice.py  test_ending_system.py  test_error_handling.py  test_executor.py  test_game_master.py  (+31 more)
(+433 files in other folders)
