[project]
name = "game-master-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "openai>=2.32.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-frontmatter>=1.1.0",
    "python-multipart>=0.0.20",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
timeout = 30

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
