[project]
name = "game-master-agent"
version = "0.1.0"
description = "Game Master Agent - GUI Edition"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.32.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-frontmatter>=1.1.0",
    "tenacity>=9.1.4",
    # GUI 依赖
    "PyQt6>=6.6.0",
    "qasync>=0.27.0",
    "pyyaml>=6.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
timeout = 30

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
